# Warehouse_DBT

./: README.md
airflow/: README.md  docker-compose.override.yml  pyproject.toml
airflow/dags/: pipeline.py
airflow/dbt/: pyproject.toml
airflow/dbt/warehouse_dbt/: dbt_project.yml
airflow/dbt/warehouse_dbt/models/marts/: best_customers.sql  fct_best_customers.sql  sale_per_month.sql
airflow/dbt/warehouse_dbt/models/marts/dim/: dim_customers.sql  dim_headquarters.sql  dim_products.sql
airflow/dbt/warehouse_dbt/models/marts/fact/: fct_sales.sql
airflow/dbt/warehouse_dbt/models/marts/kpis/: best_customers.sql  monthly_growth_churn.sql  net_revenue.sql  product_margin.sql  revenue_by_hq.sql
airflow/dbt/warehouse_dbt/models/staging/: __sources.yml  stg_customers.sql  stg_headquarters.sql  stg_products.sql  stg_sales.sql
airflow/observability/: docker-compose.yml  filebeat.yml
data_ingestion/: __init__.py  builder.py  data_generators.py  ingestor.py  pyproject.toml  utils.py
